    - Logger optimized and improved a bit.
    - Debug logs improved.
    - Cleanup makefiles.
    - Reduced used DataEmitter buffer sizes to 1.
    - Timestamp values in datatypes are now passed as const refs.
    - Removed unnecessary friend declarations from datatypes.
    - Tap now hides internal data member.
    - TouchData members renamed for clarity.
  * Downsampling (which works by dropping samples) can be now enabled/disabled.
  * OrientationInterpreter filter orientation_buffer_size is now configurable.
  * Threshold accessors removed from OrientationFilter since those had no effect.
  * OrientationInterpreter default settings now provide more sensitive orientation detection. Fixes: NB#232872.
  * Proximity sensor dataflow now uses datatype ProximityData. 
  * ProximitySensorChannelInterface provides signal and accessor for getting proximity reading with reflectance value.
  * c-api removed from doxygen targets.
  * Config-class now better handles errors.
  * AccelerometerAdaptor used for some reason OrientationData. Should have
    been AccelerometerData. Only cosmetic change.
  * Implemented new downsampling logic (Fixes: NB#234563):
    - AccelerometerAdaptor, MagnetometerAdaptor and RotationSensorChannel interval rangelist has been limited to certain sizes.
    - AccelerometerSensorChannel, RotationSensorChannel and MagnetometerSensorChannel downsamples data before propagating it.
  * Config-class has now more friendly API.
  * sensordtestapp improvements.
  * API documentation improvements.

  [Shenghua Liu]
  * Make sensortestapp thread safe in exiting
  * Fix sensord-tests-install 
  * Fix sensordtestapp for qt apt to print out proximity reflectance data
  * Fix the Proximity metatype registration problem
  * ProximityAdaptor now stores reflectance reading (Fixes: NB#234186)

 -- shenghua <ext-shenghua.1.liu@nokia.com>  Fri, 18 Mar 2011 11:19:25 +0200

sensord (0.6.40) unstable; urgency=low

  [Antti Virtanen]